# nmsi

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
install/chrome-headless/linux/general/: install.sh
install/chrome-headless/universal/general/: install.sh
install/helm/universal/general/: install.sh
install/homebrew/macos/arm64/: install.sh
install/kubectl/linux/amd64/: install.sh
install/npm-nvm/universal/general/: install.sh
install/rustup/universal/general/: install.sh
install/tailscale/rhel8/general/: install.sh
install/tailscale/rhel9/general/: install.sh
install/tailscale/ubuntu24/general/: install.sh
install/uv/macos/arm64/: install.sh
src/: downloader.py  nmsi.py
tests/: smoke_test.py
